# Software_Engineering_Career_Projects

./: README.md
real-time-sensor-monitoring-system/: .gitignore  CMakeLists.txt  README.md
real-time-sensor-monitoring-system/docs/: architecture.md  test_plan.md
real-time-sensor-monitoring-system/docs/requirements/: software_requirements.md  traceability_matrix.md
real-time-sensor-monitoring-system/include/system/: EventLogger.hpp  Fault.hpp  FaultDetector.hpp  SensorMessageParser.hpp  SensorReading.hpp  SystemStateManager.hpp
real-time-sensor-monitoring-system/simulator/: sensor_simulator.py
real-time-sensor-monitoring-system/src/: EventLogger.cpp  FaultDetector.cpp  SensorMessageParser.cpp  SystemStateManager.cpp  main.cpp
real-time-sensor-monitoring-system/tests/integration/: run_scenarios.py
real-time-sensor-monitoring-system/tests/unit/: FaultDetectorTests.cpp  SensorMessageParserTests.cpp  SystemStateManagerTests.cpp
